--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -21,3 +21,7 @@ main{
   max-width: 100%;
   margin: auto;
 }
+
+@media only screen and (max-device-width: 640px), only screen and (max-device-width: 667px), only screen and (max-width: 480px) and (orientation : portrait) {
+
+}
