--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,8 @@
+@font-face{
+  font-family: 'Public Sans';
+   src: url("/fonts/PublicSans-Medium.woff2") format("woff2"), url("/fonts/PublicSans-Medium.woff") format("woff"),
+}
+
 body{
   font-family: 'Public Sans', sans-serif;
   overflow: hidden;
@@ -20,8 +25,4 @@ main{
 
   max-width: 100%;
   margin: auto;
-}
-
-@media only screen and (max-device-width: 640px), only screen and (max-device-width: 667px), only screen and (max-width: 480px) and (orientation : portrait) {
-
 }
